# poly_strategy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_snapshot_loop.ps1
.github/: SECURITY.md  pull_request_template.md
docs/: command-reference.md  operations.md  pipeline.md  repository-layout.md  security.md
poly_strategy/: __init__.py  alerts.py  backtest.py  cli.py  collectors.py  cross_platform.py  execution.py  execution_checks.py  exhaustive_groups.py  external_signals.py  fees.py  maker.py  models.py  monitoring.py  near_miss.py  notifications.py  oddpool.py  openai_rules.py  orderbook.py  paper.py  paper_analysis.py  realtime.py  recent_lines.py  risk.py  rule_discovery.py  scanner.py  success.py  watchlist.py
reports/: arb-persistence-2026-05-12.md  binary-refined-2026-05-12.md  binary-refined-2026-05-13.md  builder-fee-investigation-2026-05-15.md  cross-platform-feasibility-2026-05-15.md  cross-platform-pipeline-verdict-2026-05-15.md  experiment-gamma-distribution-2026-05-12.md  experiment-llm-complex-recognition-consolidated-summary-2026-05-13.md  experiment-llm-complex-recognition-elysiver-final-candidates-messages-2026-05-13.md  experiment-llm-complex-recognition-gpt54-mini-fallback-2026-05-13.md  experiment-llm-complex-recognition-secondary-candidates-slow-smoke-2026-05-12.md  experiment-llm-complex-recognition-secondary-candidates-strict-v2-2026-05-13.md  experiment-llm-complex-recognition-three-provider-calibration-2026-05-12.md  experiment-llm-complex-recognition-windhub-all-strict-2026-05-12.md  (+34 more)
(+101 files in other folders)
